[package]
name = "core"
version = "0.0.1-beta"
authors = ["Eric Chen <kych@berkeley.edu>", "Jiachen Yuan <jcyuan_johnson@berkeley.edu>"]
description = "The application core code"
edition = "2021"

[features]
default = ["ros"]
ros = []

[dependencies]
utils = { path = "../utils" }

rand = "0.8.4"
log = "0.4.14"
local-ip-address = "0.4.9"
strum_macros = "0.24.3"
anyhow = "1.0.66"
derivative = "2.2.0"
strum = "0.24.1"
multimap = "0.8.3"
openssl = "0.10.42"
regex="1.7.0"
serde = "1.0.149"
serde_json = "*"
tokio = { version = "1.22", features = ["full"] }
tokio-core = "0.1"
futures = "0.3.19"
tokio-openssl = '0.6'
tonic = "0.8"
prost = "0.11"
sha2 = "0.10.6"
base64="0.13.0"
lazy_static = "1.4"
hyper = { version = "0.14.16", features = ["full"] }
async-datachannel = "0.4.0"
async-tungstenite = { version = "0.23.0", features = ["tokio-openssl"] }
tracing-subscriber = "0.3.16"
parking_lot = "0.12.1"
tracing = "0.1.37"
bincode = "1.3.3"
# r2r = {path = "/home/gdpmobile8/r2r/r2r"}
r2r = {git = "https://github.com/KeplerC/r2r.git", rev = "edfde7a"}
redis ={ version = "0.23.0" }
redis-async = "0.16.0"
axum = "0.6.18"
axum-macros = "0.3.7"
tokio-util = "0.7.8"
byteorder = "1.4.3"
chrono = "0.4.19"
librice = "=0.0.3"

aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
tc-egress-common = { path = "../tc-egress-common", features = ["user"] }
clap = { version = "4.1", features = ["derive"] }
bytes = "1"
env_logger = "0.11"


[build-dependencies]
tonic-build = "0.8"

