[package]
name = "fogrs-core"
version = "0.0.1-beta"
authors = ["Eric Chen <kych@berkeley.edu>", "Jiachen Yuan <jcyuan_johnson@berkeley.edu>"]
description = "The application core code"
edition = "2021"

[features]
default = ["ros"]
ros = []

[dependencies]
fogrs-utils = { path = "../fogrs-utils" }
fogrs-ros = { path = "../fogrs-ros" }
fogrs-common = { path = "../fogrs-common" }
fogrs-kcp = { path = "../fogrs-kcp" }
fogrs-signaling = { path = "../fogrs-signaling" }

rand = "0.8.4"
log = "0.4.14"
strum_macros = "0.24.3"
anyhow = "1.0.66"
strum = "0.24.1"
multimap = "0.8.3"
openssl = "0.10.42"
regex="1.7.0"
serde = "1.0.149"
serde_json = "*"
tokio = { version = "1.38", features = ["full"] }
tokio-core = "0.1"
futures = "0.3.19"
# prost = "0.11"
sha2 = "0.10.6"
lazy_static = "1.4"
hyper = { version = "0.14.16", features = ["full"] }
# async-datachannel = "0.4.0"
# async-tungstenite = { version = "0.23.0", features = ["tokio-openssl"] }
# tracing-subscriber = "0.3.16"
# parking_lot = "0.12.1"
console-subscriber = "0.3.0"
tracing = "0.1.37"
bincode = "1.3.3"
# r2r = {git = "https://github.com/KeplerC/r2r.git", rev = "85f6ab046"}
redis ={ version = "0.23.0" }
redis-async = "0.16.0"
axum = "0.6.18"
axum-macros = "0.3.7"
tokio-util = "0.7.8"
byteorder = "1.4.3"
chrono = "0.4.19"
librice = "0.0.4"
byte_string = "1"
clap = { version = "4.1", features = ["derive"] }
bytes = "1"
env_logger = "0.11.3"
libc = "0.2"
default-net = "0.21"
pnet = "0.35"
socket2 = "0.4"
serde_yaml = "0.9.34"