[package]
name = "fogrs-signaling"
version = "0.2.0"
authors = ["Kaiyuan Chen"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
tokio-stream = "0.1"