[package]
name = "fogrs-signaling"
version = "0.2.0"
authors = ["Kaiyuan Chen"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
fogrs-common = { path = "../fogrs-common" }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"
tokio-stream = "0.1"
log = "0.4"
env_logger = "0.11.3"
console-subscriber = "0.3.0"

[[bin]]
name = "fogrs-signaling"
path = "src/main.rs"